k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubesample
  labels:
    app: kubesample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubesample
  template:
    metadata:
      labels:
        app: kubesample
    spec:
      containers:
        - name: kubesample
          image: localhost:5000/avabhyankar/kubesample:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kubesample-service
spec:
  selector:
    app: kubesample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
